--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
  <body>
   <Table cellspacing="14">
     <tr>
-      <td> <img height="200" src="images/me-modified.png"></td>
+      <td> <img height="200" src="/images/me-modified.png"></td>
       <td>  <h1> Oliver Hubbard</h1>
-        <h3> <strong> Otherwise known as ollie </strong> </h3>
+        <h3> <strong> Otherwise known as Ollie </strong> </h3>
         <a href="contact.html"><b>Contact me</b> </a>
         <p> I am 18 years old and im learning web development to increase my value so i can become rich one day</p></td>
     </tr>
