--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
   <Table cellspacing="14">
     <tr>
-      <td> <img height="200" src="/images/me-modified.png"></td>
+      <td> <img height="200" src="images/me-modified.png"></td>
       <td>  <h1> Oliver Hubbard</h1>
         <h3> <strong> Otherwise known as Ollie </strong> </h3>
         <a href="contact.html"><b>Contact me</b> </a>
