--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     In between those you have table header cells which are written as <th> then for to rows in the body
       we have <tr> and for the data below we have <td>       -->
      <h3><b><u>My work experience</b></u> </h3>
-     <table border="2" noshade cellspacing="5"> <!-- Start of table-->
+     <table noshade cellspacing="5"> <!-- Start of table-->
       <thead> <!-- Titles for each row-->
         <th>Dates</th> <!-- Each individual title-->
         <th>Workplace</th>
